Switched some of the tests in LogicTest to use scalacheck.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
       <version>1.7</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.scala-tools.testing</groupId>
+      <artifactId>scalacheck_2.9.1</artifactId>
+      <version>1.9</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
