--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>2.0.0</version>
   </parent>
   <artifactId>openregex</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
   <name>openregex</name>
   <description>OpenRegex is a library for running regular expressions over sequences of user-defined objects.</description>
