--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>edu.washington.cs.knowitall</groupId>
-    <artifactId>knowitall</artifactId>
-    <version>2.1.1</version>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
   </parent>
   <artifactId>openregex</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>openregex</name>
-  <description>OpenRegex is a library for running regular expressions over sequences of user-defined objects.</description>
+  <description>OpenRegex is an efficient and flexible library for running regular expressions over sequences of user-defined objects.</description>
   <url>http://knowitall.github.com/openregex/</url>
   <licenses>
     <license>
       <name>GPL 3</name>
       <url>http://gplv3.fsf.org/</url>
+      <distribution>repo</distribution>
     </license>
   </licenses>
   <scm>
@@ -42,7 +43,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>11.0.2</version>
+      <version>12.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -53,18 +54,18 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.9.1</version>
+      <version>2.9.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.specs2</groupId>
-      <artifactId>specs2_2.9.1</artifactId>
-      <version>1.9</version>
+      <artifactId>specs2_2.9.2</artifactId>
+      <version>1.10</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.scala-tools.testing</groupId>
-      <artifactId>scalacheck_2.9.1</artifactId>
+      <groupId>org.scalacheck</groupId>
+      <artifactId>scalacheck_2.9.2</artifactId>
       <version>1.9</version>
       <scope>test</scope>
     </dependency>
