--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>7</version>
   </parent>
   <artifactId>openregex</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>openregex</name>
   <description>OpenRegex is an efficient and flexible library for running regular expressions over sequences of user-defined objects.</description>
@@ -88,6 +88,17 @@
             <arg>-deprecation</arg>
             <arg>-unchecked</arg>
           </args>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <goals>deploy</goals>
+          <pushChanges>false</pushChanges>
+          <localCheckout>true</localCheckout>
+          <scmCommentPrefix>(release) </scmCommentPrefix>
         </configuration>
       </plugin>
     </plugins>
