--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>oss-parent</artifactId>
     <version>7</version>
   </parent>
+  <groupId>edu.washington.cs.knowitall</groupId>
   <artifactId>openregex</artifactId>
   <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -24,6 +25,10 @@
     <connection>scm:git://github.com/knowitall/openregex.git</connection>
     <developerConnection>scm:git:git@github.com:knowitall/openregex.git</developerConnection>
   </scm>
+  <organization>
+    <name>University of Washington CSE</name>
+    <url>http://cs.washington.edu/</url>
+  </organization>
   <developers>
     <developer>
       <name>Michael Schmitz</name>
@@ -33,12 +38,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  <repositories>
-    <repository>
-      <id>knowitall-public</id>
-      <url>http://knowitall.cs.washington.edu/maven2</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>com.google.guava</groupId>
@@ -73,22 +72,22 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.0.1</version>
         <configuration>
           <args>
             <arg>-deprecation</arg>
             <arg>-unchecked</arg>
           </args>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
